--- a/SneakerDex/src/App.css
+++ b/SneakerDex/src/App.css
@@ -1,8 +1,17 @@
-.affix {
-      top: 0;
-      width: 100%;
-  }
+.sneakerdex-body{
+  padding-top: 3%;
+}
 
-  .affix + .container-fluid {
-      padding-top: 70px;
-  }
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.item {
+    width: 300px;
+    height: 300px;
+    height: auto;
+    float: left;
+    margin: 3px;
+    padding: 3px;
+}
