Change header color with muitheme

--- a/SneakerDex/src/App.css
+++ b/SneakerDex/src/App.css
@@ -44,6 +44,9 @@ img {
   /*letter-spacing: 2px;*/
 }
 
+.sneaker-nav {
+  color:rgb(255, 255, 255);
+}
 
 .sneaker-grid {
   font-family: Roboto, sans-serif;
